Access token expiry (#1513)
* Access token expiry

# Conflicts:
#	server/src/main/java/org/eclipse/openvsx/repositories/RepositoryService.java
#	server/src/test/java/org/eclipse/openvsx/repositories/RepositoryServiceSmokeTest.java

* adjust mail template

* fix merge conflicts

* make MailService fail-safe

* refactor token related operations into an AccessTokenService, rename existing TokenService to EclipseTokenService, cleanup tests

* overhaul personal access token expiration mechanism

* revert accidental commit

* add javadoc for configuration options

* fix smoke tests

---------

Co-authored-by: Thomas Neidhart <thomas.neidhart@eclipse-foundation.org>